<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">服裝小店</string>
    <string name="action_settings">Settings</string>
    <string name="fuZXDGLXT">服裝小店管理系統</string>
    <string name="banB">版本</string>
    <string name="niHHYSYBXT">你好 歡迎使用本系統</string>
    <string name="xiaCCZ">下次充值</string>
    <string name="shanHGGZS">Powered by 山海觀工作室</string>
    <string name="jinH">進貨</string>
    <string name="xiaoS">銷售</string>
    <string name="panD">盤點</string>
    <string name="baoB">報表</string>
    <string name="xiT">系統</string>
    <string name="huoPDL">貨品登陸</string>
    <string name="huoPCX">貨品查詢</string>
    <string name="tuiCSDL">退廠商登陸</string>
    <string name="jinHD">進貨單</string>
    <string name="xiaoSD">銷售單</string>
    <string name="xiaoSCX">銷售查詢</string>
    <string name="keHTH">客戶退貨</string>
    <string name="keHDH">客戶訂貨</string>
    <string name="panDD">盤點單</string>
    <string name="yiSDL">遺失登陸</string>
    <string name="ruKDL">入庫登陸</string>
    <string name="ruKYSHY">入庫遺失還原</string>
    <string name="keHXFHZ">客戶消費匯總</string>
    <string name="gongYSJX">供應商績效</string>
    <string name="shouZDL">收支登陸</string>
    <string name="shouZMXCX">收支明細查詢</string>
    <string name="shouZZB">收支總表</string>
    <string name="xiuGMM">修改密碼</string>
    <string name="gongYSSD">供應商設定</string>
    <string name="shiYSM">使用說明</string>
    <string name="chongZ">充值</string>
    <string name="tuiJSYZ">推薦使用者</string>
    <string name="dengC">登出</string>
    <string name="xinZ">新增</string>
    <string name="chuC">儲存</string>
    <string name="xiaYB">下一筆</string>
    <string name="fanH">返回</string>
    <string name="gongYSMC">供應商名稱</string>
    <string name="gongYSDZ">供應商地址</string>
    <string name="lianXRXM">聯繫人姓名</string>
    <string name="lianXRDH">聯繫人電話</string>
    <string name="beiZ">備註</string>
    <string name="chuCCG">儲存成功</string>
    <string name="chuCSB">儲存失敗</string>
    <string name="gongYSMCCF">供應商名稱重複</string>
    <string name="queR">確認</string>
    <string name="tianJ">Add</string>
    <string name="qingSRYBDH">請輸入一筆電話</string>
    <string name="qiY">啟用</string>
    <string name="tingY">停用</string>
    <string name="xianSQY">顯示啟用</string>
    <string name="gongYS">供應商</string>
    <string name="paiZ">拍照</string>
    <string name="benDT">本地圖</string>
    <string name="liST">歷史圖</string>
    <string name="gongYSXH">供應商型號</string>
    <string name="jingHJ">進貨價</string>
    <string name="biaoZSJ">標準售價</string>
    <string name="jianS">件數</string>
    <string name="huoPBZ">貨品備註</string>
    <string name="chaX">查詢</string>
    <string name="gongYSMCBXYZL">供應商名稱必須有資料</string>
    <string name="gongYSXHHDCLSZL">輸入型號會帶出歷史資料</string>
    <string name="noImageShow">1.可拍照取圖 \n2.可從本地圖庫取圖 \n3.選歷史圖會帶出歷史資料 </string>
    <string name="qingXZGYS">請選擇供應商</string>
    <string name="tuPHGYSXHXYZL">圖片或供應商型號, 須有資料</string>
    <string name="zhiKT">只看圖</string>
    <string name="shaiX">篩選</string>
    <string name="jin">進</string>
    <string name="shou">售</string>
    <string name="yu">餘</string>
    <string name="yuan">元</string>
    <string name="jian">件</string>

</resources>
