<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:paddingTop="50dp"
    android:paddingLeft="30dp">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xiuGMM"
        android:id="@+id/myButton_xiuGMM" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gongYSSD"
        android:id="@+id/myButton_gongYSSD" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shiYSM"
        android:id="@+id/myButton_shiYSM" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chongZ"
        android:id="@+id/myButton_chongZ" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tuiJSYZ"
        android:id="@+id/myButton_tuiJSYZ" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dengC"
        android:id="@+id/myButton_dengC" />
</LinearLayout>