<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:paddingTop="50dp"
    android:paddingLeft="30dp">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/panDD"
        android:id="@+id/myButton_panDD" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yiSDL"
        android:id="@+id/myButton_yiSDL" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ruKDL"
        android:id="@+id/myButton_ruKDL" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ruKYSHY"
        android:id="@+id/myButton_ruKYSHY" />
</LinearLayout>