<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:paddingTop="50dp"
    android:paddingLeft="30dp">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xiaoSD"
        android:id="@+id/myButton_xiaoSD" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xiaoSCX"
        android:id="@+id/myButton_xiaoSCX" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keHTH"
        android:id="@+id/myButton_keHTH" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keHDH"
        android:id="@+id/myButton_keHDH" />
</LinearLayout>