<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:paddingTop="50dp"
    android:paddingLeft="30dp">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/huoPDL"
        android:id="@+id/myButton_huoPDL"
        android:singleLine="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/huoPCX"
        android:id="@+id/myButton_huoPCX" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tuiCSDL"
        android:id="@+id/myButton_tuiCSDL" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jinHD"
        android:id="@+id/myButton_jinHD" />

</LinearLayout>