<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Padding_TOP10_LEFT10">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paiZ"
                android:id="@+id/myBtn_paiZ"
                android:width="80dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/liST"
                android:id="@+id/myBtn_liST"
                android:width="80dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/benDT"
                android:id="@+id/myBtn_benDT"
                android:width="80dp" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/myImg"
            android:paddingLeft="10dp"
            android:maxHeight="300dp"
            android:maxWidth="300dp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/noImageShow"
            android:id="@+id/myTv_img"
            android:gravity="center_vertical"
            android:textColor="@color/Gray" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="90dp"
            android:layout_height="fill_parent"
            android:text="@string/gongYS"
            android:id="@+id/textView"
            android:gravity="center_vertical|right" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mySpinner"
            android:layout_marginLeft="5dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="@style/Padding_TOP5_BOTTOM5">

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/gongYSXH"
            android:id="@+id/textView2"
            android:gravity="right" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/myET_gongYSXH"
            android:layout_marginLeft="5dp"
            android:hint="@string/gongYSXHHDCLSZL"
            android:textColorHint="@color/ColdGray"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="@style/Padding_TOP5_BOTTOM5">

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/jingHJ"
            android:id="@+id/textView3"
            android:gravity="right" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/myET_jingHJ"
            android:layout_marginLeft="5dp"
            android:singleLine="true"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="@style/Padding_TOP5_BOTTOM5">

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/biaoZSJ"
            android:id="@+id/textView4"
            android:gravity="right" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/myET_biaoZSJ"
            android:layout_marginLeft="5dp"
            android:singleLine="true"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="@style/Padding_TOP5_BOTTOM5">

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/jianS"
            android:id="@+id/textView5"
            android:gravity="right" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/myET_jianS"
            android:layout_marginLeft="5dp"
            android:singleLine="true"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="@style/Padding_TOP5_BOTTOM5">

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/huoPBZ"
            android:id="@+id/textView6"
            android:gravity="right" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/myET_huoPBZ"
            android:layout_marginLeft="5dp"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chuC"
            android:id="@+id/myBtn_chuC" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xiaYB"
            android:id="@+id/myBtn_xiaYB" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chaX"
            android:id="@+id/myBtn_chaX" />
    </LinearLayout>
</LinearLayout>