<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/banB"
            android:id="@+id/textView2"
            android:textColor="@color/red" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1.0"
            android:id="@+id/textView3"
            android:textColor="@color/red" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/niHHYSYBXT"
        android:id="@+id/myTextView"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xiaCCZ"
        android:id="@+id/myTextView2"
        android:layout_marginLeft="50dp" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_marginTop="20dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="這裡用來放一些系統改版說明等..\n這裡用來放一些系統改版說明等..\n這裡用來放一些系統改版說明等..\n這裡用來放一些系統改版說明等..\n這裡用來放一些系統改版說明等..\n這裡用來放一些系統改版說明等..\n這裡用來放一些系統改版說明等..\n這裡用來放一些系統改版說明等..\n"
            android:id="@+id/myTextView3" />
    </ScrollView>

</LinearLayout>